spacing fix

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -149,6 +149,7 @@
     .header-subtext {
         padding: 0px;
         margin: 30px;
+        line-height: 21px;
     }
 }
 
